# controlled-execution-system

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.ces/: verification-profile.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish-testpypi.yml  publish.yml
.hermes/findings/: 2026-05-04-idealedger-brownfield-scan-python-package.md  2026-05-04-releasepulse-approved-status-diagnostics.md  2026-05-04-releasepulse-brownfield-critical-flow-splitting.md  2026-05-04-releasepulse-recovery-negative-evidence.md  2026-05-04-releasepulse-redogfood-runtime-stdin.md  2026-05-04-releasepulse-redogfood-runtime-timeout.md
.hermes/plans/: 2026-05-04_102810-ces-zero-to-100-robustness-roadmap.md  2026-05-04_125246-releasepulse-findings-pr-plan.md
docs/: Audit_Integrity.md  Benchmarking.md  Brownfield_Guide.md  Codex_Scratch_Project_E2E.md  Completion_Gate_Smoke_Test.md  Data_Boundary.md  Database_Operations.md  Docs_Index.md  First_15_Minutes.md  FreshCart_Worked_Example.md  GNHF_Trial_Guide.md  Getting_Started.md  Intake.md  Intent_Gate.md  Operations_Runbook.md  Operator_Playbook.md  Positioning.md  Product_Playbooks.md  Production_Deployment_Guide.md  Public_Release_Checklist.md  Quick_Reference_Card.md  Quickstart.md  RELEASE.md  Runtime_Adapter_Matrix.md  Secrets_Management.md  Security_Audit.md  Semantic_Codebase_Mapping.md  Troubleshooting.md  Verification_Profile.md  friction-log.md  scenario-matrix.md
docs/ai/ddd/: context-map.md  contracts.md  domain-language.md  open-questions.md
docs/audits/: 2026-05-10-full-codebase-audit-closure.md  2026-05-13-full-codebase-audit-closure.md  2026-05-14-full-codebase-audit-closure.md  2026-05-20-public-readiness-audit-implementation-ledger.md  2026-05-20-public-readiness-audit.md  controlled_execution_system_audit_2026-05-20.md
docs/benchmark/: ab-gauntlet-sample.json
docs/ces-demo/: DESIGN.md  index.html  meta.json  package.json
docs/designs/: 2026-04-21-ces-spec-authoring.md
docs/historical/: Implementation_Guide.md  PRD.md  ROADMAP_v1.1_and_beyond.md
docs/plans/: 2026-04-21-ces-spec-authoring.md  2026-05-01-ai-risk-mitigation-implementation-plan.md  2026-05-03-dogfood-recovery-diagnostics.md  2026-05-04-recovery-half-failure-fixes.md  2026-05-04-runlens-dogfood-fixes.md  2026-05-06-taskledger-greenfield-dogfood-fixes.md  2026-05-08-ces-control-plane-and-repo-skills-implementation-plan.md  2026-05-08-ces-control-plane-and-repo-skills.md  2026-05-11-ces-harness-evolution-layer.md  2026-05-13-ces-intent-gate-spec-ledger.md  2026-05-14-vibe-coder-completion-roadmap.md  2026-05-16-ces-intake-execution-contract.md  2026-05-19-ces-semantic-review-layer-prd.md  CES_MRI_Codex_Goal_Prompt.md  CES_MRI_Progress_Log.md  CES_Production_Autopilot_Progress_Log.md  CES_Semantic_Codebase_Mapping_Progress_Log.md
examples/: grafana-alert-trends.json  grafana-governance-health.json  grafana-polyrepo-delivery.json
examples/freshcart/: run_e2e.py  run_local_e2e.py  sample_data.py  seed_data.py
scripts/: codex_scratch_harness.py  gnhf_trial.sh  run_codex_brownfield_e2e.py  run_codex_scratch_e2e.py
src/ces/: __init__.py  codebase_mapping.py  local_state_path.py
src/ces/benchmark/: __init__.py  compare.py  greenfield.py  runtime_preflight.py
src/ces/brownfield/: __init__.py  protocols.py  records.py
src/ces/cli/: __init__.py  _async.py  _blocker_diagnostics.py  _builder_evidence.py  _builder_flow.py  _builder_handoff.py  _builder_report.py  _context.py  _errors.py  _evidence_handoff.py  _explain_views.py  _factory.py  _legacy_config.py  _output.py  _project_config.py  _run_completion_reporting.py  _run_prompting.py  _runtime_diagnostics.py  _services.py  _state_path.py  _wizard_helpers.py  approve_cmd.py  audit_cmd.py  autopilot_cmd.py  baseline_cmd.py  benchmark_cmd.py  brownfield_cmd.py  classify_cmd.py  cleanup_cmd.py  complete_cmd.py  diff_cmd.py  doctor_cmd.py  dogfood_cmd.py  emergency_cmd.py  evidence_cmd.py  execute_cmd.py  gate_cmd.py  harness_cmd.py  init_cmd.py  intake_cmd.py  (+16 more)
src/ces/control/: __init__.py
src/ces/emergency/: __init__.py  protocols.py
src/ces/execution/: __init__.py  _subprocess_env.py  agent_runner.py  completion_parser.py  output_capture.py  pipeline.py  processes.py  runtime_safety.py  sandbox.py  secrets.py  workspace_delta.py
src/ces/harness/: __init__.py  protocols.py
src/ces/harness_evolution/: __init__.py  attribution.py  distiller.py  manifest_io.py  memory.py  models.py  paths.py  patterns.py  report.py  repository.py  trajectory.py  verdicts.py
src/ces/intake/: __init__.py  contracts.py  protocols.py
src/ces/intent_gate/: __init__.py  classifier.py  llm_preflight.py  models.py
src/ces/knowledge/: __init__.py  protocols.py
src/ces/local_store/: __init__.py  codecs.py  queries.py  records.py  repositories.py  schema.py  store.py  writes.py
src/ces/observability/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_audit_chain.py  test_db.py  test_docker_sandbox.py  test_freshcart_e2e.py  test_manifest_lifecycle.py  test_phase02_cross_service.py  test_phase03_pipeline.py  test_phase04_pipeline.py  test_phase05_cross_service.py  test_pipeline_e2e.py  test_spec_end_to_end.py  test_workflow.py
tests/property/: test_spec_roundtrip.py
tests/support/: builder_scenarios.py  builder_validation.py
tests/unit/: __init__.py  conftest.py  test_base_model.py  test_builder_flow.py  test_codebase_mapping.py  test_config.py  test_crypto.py  test_enums.py  test_intake_contract.py  test_local_store.py  test_local_store_codecs.py  test_local_store_queries.py  test_local_store_schema.py  test_local_store_writes.py  test_logging.py  test_no_llm_imports.py  test_package_artifacts.py  test_release_workflows.py  test_review_semantic_layer.py  test_verification_profile.py
(+446 files in other folders)
